--- a/css/skills2.css
+++ b/css/skills2.css
@@ -187,17 +187,19 @@ h1 {
     }
     
     .hovereffect h2 {
-    text-transform:uppercase;
+    text-transform:capitalize;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
     color:#fff;
     text-align:center;
     position:relative;
-    font-size:17px;
+    font-size:15px;
     background:rgba(0,0,0,0.6);
     -webkit-transform:translatey(-100px);
     -ms-transform:translatey(-100px);
     transform:translatey(-100px);
     -webkit-transition:all .2s ease-in-out;
     transition:all .2s ease-in-out;
+    margin-top: 25px;
     padding:10px;
     }
     
