--- a/css/customD.css
+++ b/css/customD.css
@@ -17,7 +17,7 @@
 
 @media screen and (max-width: 768px) {
   .text {
-    font-size: 25px;
+    font-size: 22px;
     margin-bottom: 15px;
   }
 }
@@ -59,19 +59,29 @@ p {
 
 .green {
   color: #16a085;
-  text-decoration: underline;
+  text-shadow: 2px 2px 5px grey;
 }
 
 .belize {
   color: #2980b9;
+  text-shadow: 2px 2px 5px grey;
+
+  
+
 }
 
 .pomegranate {
   color: #c0392b;
+  text-shadow: 2px 2px 5px grey;
+
 }
 
 .midnight {
   color: #2c3e50;
+  text-decoration: underline;
+  text-shadow: 2px 2px 5px grey;
+
+
 }
 
 
